implementing validation of account Number and email